# configurable-backup-system

./: Cargo.toml  README.MD
examples/: archive.rs  basic.rs  diff.rs  list_backups.rs
src/: backup_manager.rs  lib.rs
src/actions/: backup_manager.rs
src/cli/: mod.rs
tests/: backup_manager.rs
