[package]
name = "obsidian_backup_system"
version = "0.1.0"
edition = "2024"
description = "A library for Obsidian to easily create and manage backups."
authors = ["Drew Chase"]
license = "MIT"

[[bin]]
name = "obackup"
path = "src/cli/mod.rs"
required-features = ["cli", "serde", "logging"]


[dependencies]
git2 = { version = "0.20.2" }
serde = { version = "*", optional = true, features = ["derive", "serde_derive"] }
clap = { version = ">=4", optional = true, features = ["derive", "usage", "suggestions", "error-context", "help", "string", "wrap_help", "color", "unicode"] }
tokio = { version = ">=1", features = ["io-util", "fs", "sync", "macros", "rt", "time", "signal"] }
anyhow = { version = ">=1", features = ["backtrace"] }
thiserror = ">=1"
serde_json = { version = "*", optional = true }
log = { version = ">=0.4", optional = true }
pretty_env_logger = { version = "0.5.0", optional = true }
sevenz-rust2 = { version = "0.19.1" }
chrono = { version = "*", features = ["serde"] }

[features]
cli = ["dep:clap", "dep:serde_json", "dep:pretty_env_logger"]
serde = ["dep:serde"]
logging = ["dep:log"]