[package]
name = "obsidian_backup_system"
version = "0.1.0"
edition = "2024"
description = "A library for Obsidian to easily create and manage backups."
authors = ["Drew Chase"]
license = "MIT"

[[bin]]
name = "obackup"
path = "src/cli/mod.rs"
required-features = ["cli", "serde", "logging", "zip"]


[dependencies]
git2 = { version = ">=0.20" }
serde = { version = "*", optional = true, features = ["derive", "serde_derive"] }
clap = { version = ">=4", optional = true, features = ["derive", "usage", "suggestions", "error-context", "help", "string", "wrap_help", "color", "unicode"] }
anyhow = { version = ">=1", features = ["backtrace"] }
serde_json = { version = "*", optional = true }
log = { version = ">=0.4", optional = true }
pretty_env_logger = { version = "*", optional = true }
sevenz-rust2 = { version = ">=0.19", optional = true }
chrono = { version = "*", features = ["serde"] }

[features]
# This will build the CLI application.
cli = ["dep:clap", "dep:serde_json", "dep:pretty_env_logger"]

# This will enable serialization/deserialization support.
serde = ["dep:serde"]

# This will enable logging support.
logging = ["dep:log"]

# This will enable support for exporting backups as 7z archives.
zip = ["dep:sevenz-rust2"]